# configbase

./: .gitignore  .mypy.ini  .pytest.ini  MANIFEST.in  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst  usage.rst
docs/api/: config.rst  search_space.rst
extra/: mypy_plugin.py
scripts/: init.sh
src/config/: __init__.py  class.py  main.py  types.py  utils.py
src/config/search_space/: __init__.py  main.py
src/configbase/: __init__.py
tests/: conftest.py  test_config.py  test_search_space.py  test_types.py
