
[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project]

name = "configbase"

authors = [{ name = "Iordanis Fostiropoulos", email = "mail@iordanis.me" }]

dynamic = ["version"]
keywords = []
description = "A Typed, Compositional Configuration Library"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []
license = { text = "proprietary" }

[project.optional-dependencies]
dev = ["mypy", "flake8", "pytest", "black", "pylint"]
[project.urls]

homepage = ""

[tool.setuptools.dynamic]
version = { attr = "configbase.__version__" }
